--- a/BasketballFrontEnd/MainWindow.xaml
+++ b/BasketballFrontEnd/MainWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BasketballFrontEnd"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Fantasy Basketball" Height="450" Width="800">
     <Grid>
-
+        <ListBox x:Name="ListBoxNbaTeams" Grid.Column="0" SelectionChanged="ListBoxNbaTeams_SelectionChanged" Margin="0,0,508,0"/>
+        <ListBox x:Name="ListBoxNbaPlayers" Grid.Column="0" SelectionChanged="ListBoxNbaPlayers_SelectionChanged" Margin="298,0,0,290"/>
+        <ListBox x:Name="ListBoxUserTeams" Grid.Column="0" SelectionChanged="ListBoxUserTeams_SelectionChanged"  Margin="297,191,0,0"/>
+        <Label Content="My Team" FontSize="24" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="353,144,0,0" VerticalAlignment="Top" Width="342"/>
     </Grid>
 </Window>
