--- a/BasketballFrontEnd/MainWindow.xaml
+++ b/BasketballFrontEnd/MainWindow.xaml
@@ -8,9 +8,9 @@
         Title="Fantasy Basketball" Height="450" Width="800">
     <Grid>
         <ListBox x:Name="ListBoxNbaTeams" Grid.Column="0" SelectionChanged="ListBoxNbaTeams_SelectionChanged" Margin="0,0,508,0"/>
-        <ListBox x:Name="ListBoxNbaPlayers" Grid.Column="0" SelectionChanged="ListBoxNbaPlayers_SelectionChanged" Margin="298,0,0,290"/>
-  
-                <Label x:Name="TitleMyTeam"  Content="My Team" FontSize="24" HorizontalContentAlignment="Center" Width="358" Height="49"/>
+        <ListBox x:Name="ListBoxNbaPlayers" Grid.Column="0" SelectionChanged="ListBoxNbaPlayers_SelectionChanged" Margin="298,0,0,314"/>
+
+        <Label x:Name="TitleMyTeam"  Content="My Team" FontSize="24" HorizontalContentAlignment="Center" Margin="443,127,115,260" Visibility="Collapsed"/>
         <ListBox x:Name="ListBoxUserTeams" Grid.Column="0" Margin="297,191,0,0" SelectionChanged="ListBoxUserTeams_SelectionChanged"/>
 
 
@@ -24,7 +24,11 @@
         <Button x:Name="AddPlayerButton" Content="Add Player" HorizontalAlignment="Left" Margin="695,155,0,0" VerticalAlignment="Top" Click="AddPlayerButton_Click" Height="31" Width="74" Visibility="Collapsed"/>
         <Button x:Name="MyTeamButton" Content="My Team" FontSize ="18" HorizontalAlignment="Left" Margin="298,153,0,0" VerticalAlignment="Top" Click="MyTeamButton_Click" Visibility="Collapsed"/>
         <Button x:Name="RemoveButton" Content="Remove From Team" HorizontalAlignment="Left" Margin="649,155,0,0" VerticalAlignment="Top" Height="31" Width="122" Click="RemoveButton_Click" Visibility="Collapsed"/>
+        <Button x:Name="NewTeamButton" Content="New Team" HorizontalAlignment="Left" Margin="325,158,0,0" VerticalAlignment="Top" Click="NewTeamButton_Click" />
+
+
 
         <ListBox x:Name="ListBoxSelectTeams" Grid.Column="0" SelectionChanged="ListBoxSelectTeams_SelectionChanged"  Margin="297,191,0,0"/>
+        <ComboBox x:Name="cmbUserTeams" HorizontalAlignment="Left" Margin="298,131,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="cmbUserTeams_SelectionChanged" Visibility="Collapsed"/>
     </Grid>
 </Window>
