--- a/BasketballFrontEnd/MainWindow.xaml
+++ b/BasketballFrontEnd/MainWindow.xaml
@@ -24,7 +24,7 @@
         <Button x:Name="AddPlayerButton" Content="Add Player" HorizontalAlignment="Left" Margin="695,155,0,0" VerticalAlignment="Top" Click="AddPlayerButton_Click" Height="31" Width="74" Visibility="Collapsed"/>
         <Button x:Name="MyTeamButton" Content="My Team" FontSize ="18" HorizontalAlignment="Left" Margin="298,153,0,0" VerticalAlignment="Top" Click="MyTeamButton_Click" Visibility="Collapsed"/>
         <Button x:Name="RemoveButton" Content="Remove From Team" HorizontalAlignment="Left" Margin="649,155,0,0" VerticalAlignment="Top" Height="31" Width="122" Click="RemoveButton_Click" Visibility="Collapsed"/>
-        <Button x:Name="NewTeamButton" Content="New Team" HorizontalAlignment="Left" Margin="325,158,0,0" VerticalAlignment="Top" Click="NewTeamButton_Click" />
+        <Button x:Name="NewTeamButton" Content="New Team" HorizontalAlignment="Left" Margin="325,158,0,0" VerticalAlignment="Top" Click="NewTeamButton_Click" Width="75" />
 
 
 
