--- a/BasketballFrontEnd/MainWindow.xaml
+++ b/BasketballFrontEnd/MainWindow.xaml
@@ -5,37 +5,50 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BasketballFrontEnd"
         mc:Ignorable="d"
-        Title="Fantasy Basketball" Height="1206" Width="1034">
+        Title="Fantasy Basketball" Height="750" Width="1238">
     <Grid>
-        <ListBox x:Name="ListBoxNbaTeams" Grid.Column="0" SelectionChanged="ListBoxNbaTeams_SelectionChanged" Margin="0,0,741,0"/>
-        <ListBox x:Name="ListBoxNbaPlayers" Grid.Column="0" SelectionChanged="ListBoxNbaPlayers_SelectionChanged" Margin="298,0,0,595"/>
+        <ListBox x:Name="ListBoxNbaTeams" Grid.Column="0" SelectionChanged="ListBoxNbaTeams_SelectionChanged" Margin="0,0,945,0"/>
+        <ListBox x:Name="ListBoxNbaPlayers" Grid.Column="0" SelectionChanged="ListBoxNbaPlayers_SelectionChanged" Margin="298,0,0,518"/>
 
-        <GroupBox Margin="317,370,0,0">
-            <ListBox x:Name="ListBoxSelectTeams" Grid.Column="0" SelectionChanged="ListBoxSelectTeams_SelectionChanged" Height="976"/>
+        <GroupBox x:Name="UserSelectTeams" Margin="317,252,0,0">
+            <ListBox x:Name="ListBoxSelectTeams" Grid.Column="0" SelectionChanged="ListBoxSelectTeams_SelectionChanged" Height="482"/>
         </GroupBox>
 
-        <GroupBox Margin="317,370,0,0">
-            <StackPanel Height="794">
-                <Label x:Name="TitleMyTeam"  Content="My Team" FontSize="18" HorizontalContentAlignment="Center" Visibility="Visible"/>
-                <Button x:Name="NewTeamButton" Content="New Team" HorizontalAlignment="Left" VerticalAlignment="Top" Click="NewTeamButton_Click" Width="83" />
-                <ComboBox x:Name="cmbUserTeams" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" SelectionChanged="cmbUserTeams_SelectionChanged" Visibility="Visible"/>
-                <Button x:Name="RemoveTeamButton" Content="Remove Team" HorizontalAlignment="Left" VerticalAlignment="Top" Width="83" Click="RemoveTeamButton_Click" Visibility="Visible"/>
-                <ListBox x:Name="ListBoxUserTeams" Grid.Column="0" SelectionChanged="ListBoxUserTeams_SelectionChanged" Visibility="Visible" Height="100"/>
+        <GroupBox x:Name="UserTeamDetails" Margin="317,252,0,0" Visibility="Collapsed">
+            <StackPanel Height="405">
+                <Label x:Name="TitleMyTeam"  Content="My Team" FontSize="18" HorizontalContentAlignment="Center"/>
+                <ComboBox x:Name="cmbUserTeams" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" SelectionChanged="cmbUserTeams_SelectionChanged"/>
+                <Button x:Name="NewTeamButton" Content="New Team" HorizontalAlignment="Left" VerticalAlignment="Top" Click="NewTeamButton_Click" Width="83"/>
+                <Button x:Name="RemoveTeamButton" Content="Remove Team" HorizontalAlignment="Left" VerticalAlignment="Top" Width="83" Click="RemoveTeamButton_Click"/>
+                <ListBox x:Name="ListBoxUserTeams" Grid.Column="0" SelectionChanged="ListBoxUserTeams_SelectionChanged" Height="304"/>
             </StackPanel>
         </GroupBox>
 
-        <GroupBox Visibility="Collapsed">
-            <StackPanel>
-                <TextBox x:Name="TextPlayerName" FontSize="24" HorizontalAlignment="Left" Margin="460,170,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Visibility="Visible" IsEnabled="False"/>
-                <TextBox x:Name="TextPPG" FontSize="24" HorizontalAlignment="Left" Margin="577,247,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Visibility="Visible" IsEnabled="False"/>
-                <TextBox x:Name="TextAPG" FontSize="24" HorizontalAlignment="Left" Margin="577,308,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Visibility="Visible" IsEnabled="False"/>
-                <TextBox x:Name="TextRPG"  FontSize="24" HorizontalAlignment="Left" Margin="577,368,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Visibility="Visible" IsEnabled="False"/>
-                <Label x:Name="ReboundsLabel" Content="Rebounds Per Game" FontSize="24" HorizontalAlignment="Left" Margin="306,371,0,0" VerticalAlignment="Top" Visibility="Visible"/>
-                <Label x:Name="AssistsLabel" Content="Assists Per Game" FontSize="24" HorizontalAlignment="Left" Margin="309,308,0,0" VerticalAlignment="Top" Visibility="Visible"/>
-                <Label x:Name="PointsLabel" Content="Points Per Game" FontSize="24" HorizontalAlignment="Center" Margin="0,246,0,0" VerticalAlignment="Top" Visibility="Visible"/>
-                <Button x:Name="AddPlayerButton" Content="Add Player" HorizontalAlignment="Left" Margin="695,155,0,0" VerticalAlignment="Top" Click="AddPlayerButton_Click" Height="31" Width="74" Visibility="Visible"/>
-                <Button x:Name="MyTeamButton" Content="My Team" FontSize ="18" HorizontalAlignment="Left" Margin="298,153,0,0" VerticalAlignment="Top" Click="MyTeamButton_Click" Visibility="Visible"/>
-                <Button x:Name="RemoveButton" Content="Remove From Team" HorizontalAlignment="Left" Margin="649,155,0,0" VerticalAlignment="Top" Height="31" Width="122" Click="RemoveButton_Click" Visibility="Visible"/>
+        <GroupBox x:Name="PlayerDetails" Margin="317,252,0,0" Visibility="Collapsed">
+            <StackPanel Height="405">
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Center">
+                    <Button x:Name="AddPlayerButton" Content="Add Player" FontSize="22" HorizontalAlignment="Left" VerticalAlignment="Top" Click="AddPlayerButton_Click"/>
+                    <Button x:Name="MyTeamButton" Content="My Team" FontSize="22" HorizontalAlignment="Left" VerticalAlignment="Top" Click="MyTeamButton_Click" Margin="100,0,0,0"/>
+                    <Button x:Name="RemoveButton" Content="Remove From Team" FontSize="22" HorizontalAlignment="Left" VerticalAlignment="Top" Click="RemoveButton_Click" Margin="100,0,0,0"/>
+                </StackPanel>
+
+                <TextBox x:Name="TextPlayerName" FontSize="24" Text="TextBox" TextAlignment="Center" TextWrapping="Wrap" Width="224" IsEnabled="False" Height="55" Margin="0,50,0,0"/>
+
+                <StackPanel Orientation="Horizontal" Margin="0,50,0,0">
+                    <Label x:Name="PointsLabel" Content="Points Per Game" FontSize="24"/>
+                    <TextBox x:Name="TextPPG" FontSize="24" Text="TextBox" TextWrapping="Wrap" Width="120" IsEnabled="False" Margin="212,0,0,0"/>
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
+                    <Label x:Name="AssistsLabel" Content="Assists Per Game" FontSize="24" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                    <TextBox x:Name="TextAPG" FontSize="24" Text="TextBox" TextWrapping="Wrap" Width="120" IsEnabled="False" Margin="207,0,0,0"/>
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
+                    <Label x:Name="ReboundsLabel" Content="Rebounds Per Game" FontSize="24" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                    <TextBox x:Name="TextRPG"  FontSize="24" Text="TextBox" TextWrapping="Wrap" Width="120" IsEnabled="False" Margin="170,0,0,0"/>
+                </StackPanel>
+
             </StackPanel>
         </GroupBox>
     </Grid>
