--- a/BasketballFrontEnd/MainWindow.xaml
+++ b/BasketballFrontEnd/MainWindow.xaml
@@ -6,47 +6,50 @@
         xmlns:local="clr-namespace:BasketballFrontEnd"
         mc:Ignorable="d"
         Title="Fantasy Basketball" Height="750" Width="1238">
-    <Grid>
-        <ListBox x:Name="ListBoxNbaTeams" Grid.Column="0" SelectionChanged="ListBoxNbaTeams_SelectionChanged" Margin="0,0,945,0"/>
-        <ListBox x:Name="ListBoxNbaPlayers" Grid.Column="0" SelectionChanged="ListBoxNbaPlayers_SelectionChanged" Margin="298,0,0,518"/>
+    <Grid Background="Aqua">
+        <ListBox x:Name="ListBoxNbaTeams" Grid.Column="0" SelectionChanged="ListBoxNbaTeams_SelectionChanged" Margin="0,0,945,0" Background="Aqua"/>
+        <ListBox x:Name="ListBoxNbaPlayers" Grid.Column="0" SelectionChanged="ListBoxNbaPlayers_SelectionChanged" Margin="298,0,0,518" Background="Aqua"/>
 
-        <GroupBox x:Name="UserSelectTeams" Margin="317,252,0,0">
-            <ListBox x:Name="ListBoxSelectTeams" Grid.Column="0" SelectionChanged="ListBoxSelectTeams_SelectionChanged" Height="482"/>
+        <GroupBox x:Name="UserSelectTeams" Margin="317,252,0,0" Background="Aqua" BorderThickness="0">
+            <ListBox x:Name="ListBoxSelectTeams" Grid.Column="0" SelectionChanged="ListBoxSelectTeams_SelectionChanged" Height="482" Margin="-9,0,0,0" Background="Aqua"/>
         </GroupBox>
 
-        <GroupBox x:Name="UserTeamDetails" Margin="317,252,0,0" Visibility="Collapsed">
-            <StackPanel Height="405">
-                <Label x:Name="TitleMyTeam"  Content="My Team" FontSize="18" HorizontalContentAlignment="Center"/>
-                <ComboBox x:Name="cmbUserTeams" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" SelectionChanged="cmbUserTeams_SelectionChanged"/>
-                <Button x:Name="NewTeamButton" Content="New Team" HorizontalAlignment="Left" VerticalAlignment="Top" Click="NewTeamButton_Click" Width="83"/>
-                <Button x:Name="RemoveTeamButton" Content="Remove Team" HorizontalAlignment="Left" VerticalAlignment="Top" Width="83" Click="RemoveTeamButton_Click"/>
-                <ListBox x:Name="ListBoxUserTeams" Grid.Column="0" SelectionChanged="ListBoxUserTeams_SelectionChanged" Height="304"/>
+        <GroupBox x:Name="UserTeamDetails" Margin="317,252,0,0" Visibility="Collapsed" Background="Aqua" BorderThickness="0">
+            <StackPanel Height="430" Background="Aqua">
+                <StackPanel Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Center">
+                    <ComboBox x:Name="cmbUserTeams" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" SelectionChanged="cmbUserTeams_SelectionChanged" FontSize="22"/>
+                    <Button x:Name="NewTeamButton" Content="New Team" FontSize="22" VerticalAlignment="Top" Click="NewTeamButton_Click" Width="120" Margin="100,0,0,0"/>
+                    <Button x:Name="RemoveTeamButton" Content="Remove Team" FontSize="22" VerticalAlignment="Top" Width="149" Click="RemoveTeamButton_Click" Margin="100,0,0,0"/>
+                </StackPanel>
+
+                <Label x:Name="TitleMyTeam"  Content="My Team" FontSize="24" HorizontalContentAlignment="Center" Margin="0,15,0,0"/>
+                <ListBox x:Name="ListBoxUserTeams" Grid.Column="0" SelectionChanged="ListBoxUserTeams_SelectionChanged" Height="304" Background="Aqua"/>
             </StackPanel>
         </GroupBox>
 
-        <GroupBox x:Name="PlayerDetails" Margin="317,252,0,0" Visibility="Collapsed">
-            <StackPanel Height="405">
+        <GroupBox x:Name="PlayerDetails" Margin="317,252,0,0" Visibility="Collapsed" Background="Aqua" BorderThickness="0">
+            <StackPanel Height="405" Background="Aqua">
                 <StackPanel Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Center">
                     <Button x:Name="AddPlayerButton" Content="Add Player" FontSize="22" HorizontalAlignment="Left" VerticalAlignment="Top" Click="AddPlayerButton_Click"/>
                     <Button x:Name="MyTeamButton" Content="My Team" FontSize="22" HorizontalAlignment="Left" VerticalAlignment="Top" Click="MyTeamButton_Click" Margin="100,0,0,0"/>
                     <Button x:Name="RemoveButton" Content="Remove From Team" FontSize="22" HorizontalAlignment="Left" VerticalAlignment="Top" Click="RemoveButton_Click" Margin="100,0,0,0"/>
                 </StackPanel>
 
-                <TextBox x:Name="TextPlayerName" FontSize="24" Text="TextBox" TextAlignment="Center" TextWrapping="Wrap" Width="224" IsEnabled="False" Height="55" Margin="0,50,0,0"/>
+                <TextBox x:Name="TextPlayerName" BorderThickness="0" FontSize="24" Text="TextBox" TextAlignment="Center" TextWrapping="Wrap" Width="224" IsEnabled="False" Height="55" Margin="0,50,0,0"/>
 
                 <StackPanel Orientation="Horizontal" Margin="0,50,0,0">
                     <Label x:Name="PointsLabel" Content="Points Per Game" FontSize="24"/>
-                    <TextBox x:Name="TextPPG" FontSize="24" Text="TextBox" TextWrapping="Wrap" Width="120" IsEnabled="False" Margin="212,0,0,0"/>
+                    <TextBox x:Name="TextPPG" FontSize="24" BorderThickness="0" Text="TextBox" TextWrapping="Wrap" Width="120" IsEnabled="False" Margin="212,0,0,0"/>
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
                     <Label x:Name="AssistsLabel" Content="Assists Per Game" FontSize="24" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                    <TextBox x:Name="TextAPG" FontSize="24" Text="TextBox" TextWrapping="Wrap" Width="120" IsEnabled="False" Margin="207,0,0,0"/>
+                    <TextBox x:Name="TextAPG" FontSize="24" BorderThickness="0" Text="TextBox" TextWrapping="Wrap" Width="120" IsEnabled="False" Margin="207,0,0,0"/>
                 </StackPanel>
 
                 <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
                     <Label x:Name="ReboundsLabel" Content="Rebounds Per Game" FontSize="24" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-                    <TextBox x:Name="TextRPG"  FontSize="24" Text="TextBox" TextWrapping="Wrap" Width="120" IsEnabled="False" Margin="170,0,0,0"/>
+                    <TextBox x:Name="TextRPG"  FontSize="24" BorderThickness="0" Text="TextBox" TextWrapping="Wrap" Width="120" IsEnabled="False" Margin="170,0,0,0"/>
                 </StackPanel>
 
             </StackPanel>
