--- a/BasketballFrontEnd/MainWindow.xaml
+++ b/BasketballFrontEnd/MainWindow.xaml
@@ -21,14 +21,18 @@
                     <Button x:Name="NewTeamButton" Content="New Team" FontSize="22" VerticalAlignment="Top" Click="NewTeamButton_Click" Width="120" Margin="100,0,0,0"/>
                     <Button x:Name="RemoveTeamButton" Content="Remove Team" FontSize="22" VerticalAlignment="Top" Width="149" Click="RemoveTeamButton_Click" Margin="100,0,0,0"/>
                 </StackPanel>
-
-                <Label x:Name="TitleMyTeam"  Content="My Team" FontSize="24" HorizontalContentAlignment="Center" Margin="0,15,0,0"/>
+                <StackPanel Orientation="Horizontal" Margin="0,20,0,0" HorizontalAlignment="Center" Width="528">
+                    <Label x:Name="TitleMyTeam"  Content="My Team" FontSize="24" HorizontalContentAlignment="Center" Margin="0,0,0,0"/>
+                    <Label x:Name="TitleBudget"  Content="Budget:" FontSize="24" HorizontalContentAlignment="Center" Margin="100,0,0,0"/>
+                    <TextBox x:Name="TextBudget" BorderThickness="0" FontSize="24" TextAlignment="Center" TextWrapping="Wrap" Width="224" IsEnabled="False" Height="36" Margin="10,0,0,0"/>
+                </StackPanel>
+                
                 <ListBox x:Name="ListBoxUserTeams" Grid.Column="0" SelectionChanged="ListBoxUserTeams_SelectionChanged" Height="304" Background="Aqua"/>
             </StackPanel>
         </GroupBox>
 
         <GroupBox x:Name="PlayerDetails" Margin="317,252,0,0" Visibility="Collapsed" Background="Aqua" BorderThickness="0">
-            <StackPanel Height="405" Background="Aqua">
+            <StackPanel Height="463" Background="Aqua">
                 <StackPanel Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Center">
                     <Button x:Name="AddPlayerButton" Content="Add Player" FontSize="22" HorizontalAlignment="Left" VerticalAlignment="Top" Click="AddPlayerButton_Click"/>
                     <Button x:Name="MyTeamButton" Content="My Team" FontSize="22" HorizontalAlignment="Left" VerticalAlignment="Top" Click="MyTeamButton_Click" Margin="100,0,0,0"/>
@@ -50,6 +54,11 @@
                 <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
                     <Label x:Name="ReboundsLabel" Content="Rebounds Per Game" FontSize="24" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                     <TextBox x:Name="TextRPG"  FontSize="24" BorderThickness="0" Text="TextBox" TextWrapping="Wrap" Width="120" IsEnabled="False" Margin="170,0,0,0"/>
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal" Margin="0,20,0,0" Height="52">
+                    <Label x:Name="PriceLabel" Content="Price" FontSize="24" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                    <TextBox x:Name="TextPrice"  FontSize="24" BorderThickness="0" Text="TextBox" TextWrapping="Wrap" Width="120" IsEnabled="False" Margin="333,0,0,0"/>
                 </StackPanel>
 
             </StackPanel>
