--- a/BasketballFrontEnd/MainWindow.xaml
+++ b/BasketballFrontEnd/MainWindow.xaml
@@ -6,19 +6,19 @@
         xmlns:local="clr-namespace:BasketballFrontEnd"
         mc:Ignorable="d"
         Title="Fantasy Basketball" Height="750" Width="1238">
-    <Grid Background="Aqua">
-        <ListBox x:Name="ListBoxNbaTeams" Grid.Column="0" SelectionChanged="ListBoxNbaTeams_SelectionChanged" Margin="0,0,945,0" Background="Aqua"/>
-        <ListBox x:Name="ListBoxNbaPlayers" Grid.Column="0" SelectionChanged="ListBoxNbaPlayers_SelectionChanged" Margin="298,0,0,518" Background="Aqua"/>
+    <Grid Background="SandyBrown">
+        <ListBox x:Name="ListBoxNbaTeams" Grid.Column="0" SelectionChanged="ListBoxNbaTeams_SelectionChanged" Margin="0,0,945,0" Background="SandyBrown"/>
+        <ListBox x:Name="ListBoxNbaPlayers" Grid.Column="0" SelectionChanged="ListBoxNbaPlayers_SelectionChanged" Margin="298,0,0,518" Background="SandyBrown"/>
 
-        <GroupBox x:Name="UserSelectTeams" Margin="317,252,0,0" Background="Aqua" BorderThickness="0">
+        <GroupBox x:Name="UserSelectTeams" Margin="317,252,0,0" Background="SandyBrown" BorderThickness="0">
             <StackPanel>
                 <Button x:Name="NewTeamButton1" Content="New Team" FontSize="22" VerticalAlignment="Top" HorizontalAlignment="Left" Click="NewTeamButton_Click" Width="120" Margin="0,0,0,0"/>
-                <ListBox x:Name="ListBoxSelectTeams" Grid.Column="0" SelectionChanged="ListBoxSelectTeams_SelectionChanged" Height="482" Margin="0,10,0,0" Background="Aqua" FontSize="22"/>
+                <ListBox x:Name="ListBoxSelectTeams" Grid.Column="0" SelectionChanged="ListBoxSelectTeams_SelectionChanged" Height="482" Margin="0,10,0,0" Background="SandyBrown" FontSize="22"/>
             </StackPanel>
         </GroupBox>
 
-        <GroupBox x:Name="UserTeamDetails" Margin="317,252,0,0" Visibility="Collapsed" Background="Aqua" BorderThickness="0">
-            <StackPanel Height="430" Background="Aqua">
+        <GroupBox x:Name="UserTeamDetails" Margin="317,252,0,0" Visibility="Collapsed" Background="SandyBrown" BorderThickness="0">
+            <StackPanel Height="430" Background="SandyBrown">
                 <StackPanel Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Center">
                     <ComboBox x:Name="cmbUserTeams" HorizontalAlignment="Left" VerticalAlignment="Top" Width="120" SelectionChanged="cmbUserTeams_SelectionChanged" FontSize="18"/>
                     <Button x:Name="NewTeamButton" Content="New Team" FontSize="22" VerticalAlignment="Top" Click="NewTeamButton_Click" Width="120" Margin="100,0,0,0"/>
@@ -30,12 +30,12 @@
                     <TextBox x:Name="TextBudget" BorderThickness="0" FontSize="24" TextAlignment="Center" TextWrapping="Wrap" Width="224" IsEnabled="False" Height="36" Margin="10,0,0,0"/>
                 </StackPanel>
 
-                <ListBox x:Name="ListBoxUserTeams" Grid.Column="0" SelectionChanged="ListBoxUserTeams_SelectionChanged" Height="304" Background="Aqua" FontSize="22"/>
+                <ListBox x:Name="ListBoxUserTeams" Grid.Column="0" SelectionChanged="ListBoxUserTeams_SelectionChanged" Height="304" Background="SandyBrown" FontSize="22"/>
             </StackPanel>
         </GroupBox>
 
-        <GroupBox x:Name="PlayerDetails" Margin="317,252,0,0" Visibility="Collapsed" Background="Aqua" BorderThickness="0">
-            <StackPanel Height="463" Background="Aqua">
+        <GroupBox x:Name="PlayerDetails" Margin="317,252,0,0" Visibility="Collapsed" Background="SandyBrown" BorderThickness="0">
+            <StackPanel Height="463" Background="SandyBrown">
                 <StackPanel Orientation="Horizontal" Margin="0,10,0,0" HorizontalAlignment="Center">
                     <Button x:Name="AddPlayerButton" Content="Add Player" FontSize="22" HorizontalAlignment="Left" VerticalAlignment="Top" Click="AddPlayerButton_Click"/>
                     <Button x:Name="MyTeamButton" Content="My Team" FontSize="22" HorizontalAlignment="Left" VerticalAlignment="Top" Click="MyTeamButton_Click" Margin="100,0,0,0"/>
@@ -67,7 +67,7 @@
             </StackPanel>
         </GroupBox>
 
-        <GroupBox x:Name="NewTeamCreation" Margin="317,252,0,0" Background="Aqua" BorderThickness="0" Visibility="Collapsed">
+        <GroupBox x:Name="NewTeamCreation" Margin="317,252,0,0" Background="SandyBrown" BorderThickness="0" Visibility="Collapsed">
             <StackPanel>
                 <Label x:Name="LabelTitleNewTeam" Content="Create New Team" FontSize="24" HorizontalAlignment="Center"/>
                 <Label x:Name="LabelTeamName" Content="New Team Name" FontSize="24" HorizontalAlignment="Center" Margin="0,50,0,0"/>
